adjusted for reduced bits

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,10 @@
+/Blocker.class
+/Car.class
 /InputSim/
+/Lane.class
+/Point.class
+/Runner.class
+/Sim.class
+/Start.class
+/TrafficController.class
+/TrafficLight.class
